# liboqs

./: CMakeLists.txt
.CMake/: alg_support.cmake
src/: CMakeLists.txt  oqsconfig.h.cmake
src/sig/: sig.c
src/sig/kaz_sign/: CMakeLists.txt  sig_kaz_sign.h  sig_kaz_sign_1.c  sig_kaz_sign_3.c  sig_kaz_sign_5.c
src/sig/kaz_sign/KAZ1509_ref/: api.h  kaz_api.c  kaz_api.h  sign.c
src/sig/kaz_sign/KAZ2321_ref/: api.h  kaz_api.c  kaz_api.h  sign.c
src/sig/kaz_sign/KAZ3241_ref/: api.h  kaz_api.c  kaz_api.h  sign.c
src/sig/kaz_sign/kaz-common/: rng.c
